tests/error/comptime/compare_pointers7.bz
// error: invalid pointer comparison
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to different stack objects
// note: lhs address points to this stack object
// note: rhs address points to this stack object
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		let i = 0;
		let j = 0;

		&i >= &j;
	});
}
